Grouping first column with expander.

--- a/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
@@ -1,7 +1,13 @@
+<div class="ui-datatable-header ui-widget-header">
+    <p-header>
+        <caption>{{label}}</caption>
+
+    </p-header>
+</div>
+
 <p-treeTable [value]="treeData" [paginator]="true" [rows]="10">
     <ng-template pTemplate="header">
         <tr>
-            <th></th>
             <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
                 <th *ngIf="showHeader(col)">{{col.header}}</th>
             </ng-template>
@@ -11,16 +17,17 @@
         <tr>
             <td>
                 <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+                {{getCellDisplayValue(rowData, firstColumn)}}
             </td>
+
             <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                <td *ngIf="showColumn(col)">{{getCellDisplayValue(rowData, col)}}</td>
+                <td *ngIf="showColumn(col) && (col.code !== firstColumn.code)">{{getCellDisplayValue(rowData, col)}}</td>
 
                 <td *ngIf="col?.uiStyles?.attributes?.alias === viewComponent.button.toString()">
-                     <nm-button
-                        [element] = "getViewParam(col, rowData['elemId'])">
-                     </nm-button>
+                    <nm-button [element]="getViewParam(col, rowData['elemId'])">
+                    </nm-button>
                 </td>
-            </ng-template> 
+            </ng-template>
         </tr>
     </ng-template>
 </p-treeTable>
