--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
@@ -4,8 +4,8 @@
         <!-- loop thru card grid -->
         <ng-template ngFor let-element [ngForOf]="card?.type?.model?.params">
             <!-- loop thru collection elements -->
-            <ng-template [ngIf]="card.config?.uiStyles?.attributes?.alias == componentTypes.cardDetail.toString()">
-                <nm-card-details [element]="card" [position]="!isLabelEmpty ? position+1 : position" [collectionElem]="card.collectionElem" [elemId]="card.elemId" ></nm-card-details>
+            <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == componentTypes.cardDetail.toString()">
+                <nm-card-details [element]="element" [position]="!isLabelEmpty ? position+1 : position" [collectionElem]="card.collectionElem" [elemId]="card.elemId" ></nm-card-details>
             </ng-template>
         </ng-template>
     </ng-template>
