--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -83,8 +83,8 @@
             </tr>
         </ng-template>
         
-        <ng-template pTemplate="body" let-rowData let-columns="columns" let-expanded="expanded">
-            <tr [pSelectableRow]="rowData">
+        <ng-template pTemplate="body" let-rowData let-columns="columns" let-rowIndex="rowIndex" let-expanded="expanded">
+             <tr [pSelectableRow]="rowData"  [ngClass]="getRowColor(rowIndex) === 0 ? 'odd' : 'even'" > 
                 <td *ngIf="element.config?.uiStyles?.attributes?.rowSelection">
                     <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
                 </td>
