Table/Grid Updates

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -98,7 +98,7 @@
 		</ng-template>
 
 		<ng-template let-row pTemplate="rowexpansion">
-			<nm-section [element]="row.nestedElement"></nm-section>	
+			<nm-section [element]="row.$nestedElement"></nm-section>	
 		</ng-template> 
 		
 		<p-footer>
