--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -1,4 +1,4 @@
-<form id="{{formId}}" [formGroup]="form" novalidate>
+<form id="{{formId}}" [formGroup]="form" *ngIf="element?.visible==true" novalidate>
     <nm-counter-message *ngIf="element.config?.uiStyles?.attributes?.showMessages" [element]="element" [form]="form"></nm-counter-message>
     <nm-label *ngIf="!isLabelEmpty" [element]="element" [size]="labelSize"></nm-label>
 
