--- a/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
@@ -17,6 +17,7 @@
     <nm-multiselect-card id="{{id}}"  *ngIf="element.config.uiStyles?.attributes?.alias == componentTypes.multiSelectCard.toString()" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-multiselect-card>
     <nm-upload id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == componentTypes.fileUpload.toString()" [formControlName]="element.config?.code" [element]="element" [form]="form"></nm-upload>
     <nm-input-switch id="{{id}}"  [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.alias == componentTypes.inputSwitch.toString()" [element]="element"  [form]="form"></nm-input-switch>
+    <nm-link *ngIf="element.config?.uiStyles?.attributes?.alias == 'Link'" [element] = "element"> </nm-link> 
     <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == componentTypes.grid.toString()">
         <nm-table
             [element]="element" [form]="form" [formControlName]="element.config?.code"
