hide just label instead of form component

--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -1,7 +1,8 @@
 <form id="{{formId}}" [formGroup]="form" *ngIf="element?.visible==true" novalidate>
-    <nm-counter-message *ngIf="element.config?.uiStyles?.attributes?.showMessages" [element]="element" [form]="form"></nm-counter-message>
-    <nm-label *ngIf="!isLabelEmpty" [element]="element" [size]="labelSize"></nm-label>
-
+    <ng-template [ngIf] = "element?.visible">
+        <nm-counter-message *ngIf="element.config?.uiStyles?.attributes?.showMessages" [element]="element" [form]="form"></nm-counter-message>
+        <nm-label *ngIf="!isLabelEmpty" [element]="element" [size]="labelSize"></nm-label>
+    </ng-template>
     <!-- Render form elements -->
     <ng-template [ngIf] = "formModel.length > 0">
         <ng-template ngFor let-frmElem [ngForOf]="formModel">
