--- a/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
@@ -2,8 +2,8 @@
 <div [formGroup]="form" *ngIf="element.config?.uiStyles?.attributes?.alias!=viewComponent.button.toString()" [hidden]="!element?.visible" [ngClass]="getComponentClass()">
    
     <nm-form-grid-filler *ngIf="element.config?.uiStyles?.attributes?.alias==componentTypes.formGridFiller.toString()" ></nm-form-grid-filler>
-    <nm-header [element]="element" *ngIf="element.config?.uiStyles?.attributes?.alias==componentTypes.header.toString()" ></nm-header>
-    <nm-paragraph [element]="element" *ngIf="element.config?.uiStyles?.attributes?.alias==componentTypes.paragraph.toString()"></nm-paragraph>
+   <!-- <nm-header [element]="element" *ngIf="element.config?.uiStyles?.attributes?.alias==componentTypes.header.toString()" ></nm-header> -->
+    <!-- <nm-paragraph [element]="element" *ngIf="element.config?.uiStyles?.attributes?.alias==componentTypes.paragraph.toString()"></nm-paragraph> -->
     <nm-input id="{{id}}" [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.type==componentTypes.text.toString()" [element]="element" [form]="form"></nm-input>
     <nm-signature id="{{id}}" [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.type==componentTypes.signature.toString()" [element]="element" [form]="form"></nm-signature>
     <nm-input-textarea id="{{id}}" [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.type==componentTypes.textarea.toString()" [element]="element" [form]="form"></nm-input-textarea>
@@ -17,7 +17,7 @@
     <nm-multiselect-card id="{{id}}"  *ngIf="element.config.uiStyles?.attributes?.alias == componentTypes.multiSelectCard.toString()" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-multiselect-card>
     <nm-upload id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == componentTypes.fileUpload.toString()" [formControlName]="element.config?.code" [element]="element" [form]="form"></nm-upload>
     <nm-input-switch id="{{id}}"  [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.alias == componentTypes.inputSwitch.toString()" [element]="element"  [form]="form"></nm-input-switch>
-    <nm-link *ngIf="element.config?.uiStyles?.attributes?.alias == 'Link'" [element] = "element"> </nm-link> 
+    <!-- <nm-link *ngIf="element.config?.uiStyles?.attributes?.alias == 'Link'" [element] = "element"> </nm-link> -->
     <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == componentTypes.grid.toString()">
         <nm-table
             [element]="element" [form]="form" [formControlName]="element.config?.code"
