Fixing an issue where @Modal scrolled to button on load

--- a/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
@@ -2,6 +2,7 @@
     <p-dialog [(visible)]="display" 
     [closable]="closable"
     [closeOnEscape]="false" 
+    [focusOnShow]="false"
     [modal]="true" 
     [width]="width" 
     (visibleChange)="closeDialog($event)"
