Adding @printable to support printing DOM content

--- a/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
@@ -22,7 +22,8 @@
         <nm-table
             [element]="element" [form]="form" [formControlName]="element.config?.code"
             [params]="element?.config?.type?.elementConfig?.type?.model?.paramConfigs" (onScrollEvent)="onScrollEvent()"
-            [position]="position">
+            [position]="position"
+            [nmPrint]="element">
         </nm-table>
     </ng-template>
 
