--- a/nimbus-ui/nimbusui/src/app/components/domain/domain-flow.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/domain/domain-flow.component.html
@@ -2,7 +2,7 @@
 <span *ngIf="hasLayout">
 	<div class="info-bar clearfix">
 	    <div [class]="p.config?.uiStyles?.attributes?.cssClass" *ngFor="let p of accordions, let index=index">
-	            <nm-accordion [element]="p"></nm-accordion>
+	            <nm-accordion [element]="p" [nmPrint]="p"></nm-accordion>
 	    </div>
 	</div>
 	
