--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -7,7 +7,7 @@
     <ng-template [ngIf] = "formModel.length > 0">
         <ng-template ngFor let-frmElem [ngForOf]="formModel">
             <ng-template [ngIf]="frmElem.elementType == formElementType.ACCORDION.toString()">
-                <nm-accordion [element]="frmElem.param" [elementCss]="elementCss" [form]="form" [position]="position + 1">
+                <nm-accordion [element]="frmElem.param" [elementCss]="elementCss" [form]="form" [position]="position + 1" [nmPrint]="frmElem.param">
                 </nm-accordion>
             </ng-template>
             <ng-template [ngIf]="frmElem.elementType == formElementType.GRID.toString()">
