--- a/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
@@ -16,7 +16,7 @@
         </p-header>
         <ng-template ngFor let-element [ngForOf]="nestedParams">
             <ng-template [ngIf]="element.alias == viewComponent.section.toString()">
-                <nm-section [element]="element"></nm-section>	
+                <nm-section [element]="element" [nmPrint]="element"></nm-section>	
             </ng-template>
         </ng-template>   
     </p-dialog>
