Renaming nmDisplayValue to nmValueStyles

--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -26,7 +26,7 @@
                 [element]="element" 
                 [required]="false">
             </nm-input-label>
-            <div class="textWrapBreakWord" [nmDisplayValue]='element.leafState' [config]='element.config'>
+            <div class="textWrapBreakWord" [nmValueStyles]='element.leafState' [config]='element.config'>
                 <span class="fieldValue">{{value ? value : placeholder}}&nbsp;</span>
             </div>    
         </div>
