--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-field.component.html
@@ -11,7 +11,6 @@
                 [element]="element" 
                 [required]="false">
             </nm-input-label>
-            <!--<label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label>-->
             <ng-template [ngIf]="value">
                 <div class="textWrapBreakWord">{{value | dateTimeFormat: element.config?.uiStyles?.attributes?.datePattern : element.config.type.name }}&nbsp;</div>
             </ng-template>
@@ -21,14 +20,17 @@
          </ng-template>
 
         <div class="form-group" *ngIf="!element.config.uiStyles.attributes.inplaceEdit && !isDate(element.config.type.name)">
-           <!-- <label class="" *ngIf="element.config.uiStyles.attributes.showName==true">{{label}}</label> -->
            <nm-input-label *ngIf="element.config.uiStyles.attributes.showName==true"
                 [element]="element" 
                 [required]="false">
             </nm-input-label>
-            <div class="textWrapBreakWord" [nmValueStyles]='element.leafState' [config]='element.config'>
-                <span class="fieldValue">{{value ? value : placeholder}}&nbsp;</span>
-            </div>    
+            <div class="textWrapBreakWord" [nmDisplayValue]='element' [nmValueStyles]="element.leafState" [config]="element.config">
+                <ng-template #body let-displayValue>
+                    <span class="fieldValue">
+                        {{displayValue}}&nbsp;
+                    </span>
+                </ng-template>
+            </div>
         </div>
     </ng-template>
 </div>
