fix for no scrolbar on modal due to primeng code change

--- a/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/modal/modal.component.html
@@ -1,5 +1,5 @@
 <ng-template [ngIf]="type == componentTypes.dialog.toString()">
-    <p-dialog [(visible)]="display" 
+    <p-dialog #modal [(visible)]="display" 
     [closable]="closable"
     [closeOnEscape]="false" 
     [focusOnShow]="false"
