--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -14,11 +14,11 @@
                 <!-- Future Implementation -->
             </ng-template>
             <ng-template [ngIf]="frmElem.elementType == formElementType.ELEMENTGROUP.toString()">
-                <nm-frm-grp [element]="frmElem.param" [form]="form" [elementCss]="elementCss" [position]="position + 1"> 
+                <nm-frm-grp [element]="frmElem.param" [ngClass]="getElementClass(elementCss, frmElem.param)" [form]="form" [position]="position + 1"> 
                 </nm-frm-grp>
             </ng-template>
             <ng-template [ngIf]="frmElem.elementType == formElementType.ELEMENT.toString()">
-                <nm-frm-grp [element]="frmElem.param" [form]="form" [elementCss]="elementCss" [position]="position"> 
+                <nm-frm-grp [element]="frmElem.param" [ngClass]="getElementClass(elementCss, frmElem.param)" [form]="form" [position]="position"> 
                 </nm-frm-grp>
             </ng-template>
         </ng-template>
