--- a/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree-grid/tree-grid.component.html
@@ -5,7 +5,7 @@
     </p-header>
 </div>
 
-<p-treeTable [value]="treeData" [paginator]="true" paginatorPosition="both" [rows]="10">
+<p-treeTable #tt [value]="treeData" [paginator]="true" paginatorPosition="both" [rows]="10">
 
     <ng-template pTemplate="header">
         <tr>
