--- a/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tile.component.html
@@ -23,7 +23,7 @@
 					<nm-tile [element]="element" tileType="subtile" [nmPrint]="element"></nm-tile>
 				</ng-template>
 				<ng-template [ngIf]="element.alias == viewComponent.section.toString()">
-					<nm-section [element]="element" [position]="position+1" [nmPrint]="element"></nm-section>	
+					<nm-section [element]="element" [position]="position+1" [nmPrint]="element" class="element.config?.uiStyles?.attributes?.cssClass"></nm-section>	
 				</ng-template>
 				<ng-template [ngIf]="element.alias == viewComponent.modal.toString()">
 					<nm-modal [element]="element" [nmPrint]="element" [contentSelector]="'div.ui-dialog-content'"></nm-modal>
