--- a/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
@@ -40,6 +40,7 @@
             <ng-template [ngIf]="element.alias == componentTypes.accordion.toString()">
                 <nm-accordion [position]="position+1" [element]="element" [nmPrint]="element"></nm-accordion>
             </ng-template>
+            <!--Chart-->
             <ng-template [ngIf]="element.alias == componentTypes.chart.toString()">
                 <nm-chart [element]="element"></nm-chart>
             </ng-template>
@@ -53,7 +54,7 @@
                     [nmPrint]="element">
                 </nm-table>
             </ng-template>
-
+            <!--Tree Grid-->
             <ng-template [ngIf]="element.alias == componentTypes.treeGrid.toString()">
                 <nm-treegrid
                     [element]="element" 
@@ -66,6 +67,7 @@
                     <nm-button [element]="element"> </nm-button>
                 </div>
             </ng-template>
+            <!--Button Group-->
             <ng-template [ngIf]="element.alias == viewComponent.buttongroup.toString()">
                 <nm-button-group [buttonList]="element.type?.model?.params" class="{{element.config?.uiStyles?.attributes?.cssClass}} buttonGroup">
                 </nm-button-group>
@@ -82,9 +84,10 @@
             <ng-template [ngIf]="element.alias == componentTypes.inputSwitch.toString()">
                 <nm-input-switch id="{{code}}" [element]="element" [(ngModel)]="element.leafState"></nm-input-switch>
             </ng-template>
-             <ng-template [ngIf]="element.alias == 'Tab'">
+            <!--Tab-->
+            <ng-template [ngIf]="element.alias == 'Tab'">
                 <nm-tab [element]="element"></nm-tab>
-             </ng-template>
+            </ng-template>
         </ng-template>
     </ng-template>
 </div>
